Historgram rest implemented and hotel.amenities relation changed to many to many back