@@ -1,6 +1,7 @@
 package by.shakhau.hotel.mapper;
 
 import by.shakhau.hotel.dto.Hotel;
+import by.shakhau.hotel.model.AddressEntity;
 import by.shakhau.hotel.model.AmenityEntity;
 import by.shakhau.hotel.model.HotelEntity;
 import org.mapstruct.Mapper;
@@ -13,7 +14,6 @@ import java.util.stream.Collectors;
 @Mapper(componentModel = "spring", uses = { AddressMapper.class, ContactsMapper.class, ArrivalTimeMapper.class })
 public interface HotelMapper {
 
-    @Mapping(target = "address", ignore = true)
     @Mapping(target = "contacts", ignore = true)
     @Mapping(target = "arrivalTime", ignore = true)
     @Mapping(target = "amenities", ignore = true)
@@ -27,7 +27,7 @@ public interface HotelMapper {
         if (amenities == null) return Collections.emptyList();
         return amenities.stream()
                 .map(AmenityEntity::getName)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     default List<AmenityEntity> mapNamesToAmenities(List<String> names) {
